fixing_partly_need_toAdd_categoryWrap_styles

--- a/src/components/UserAddArticle/index.scss
+++ b/src/components/UserAddArticle/index.scss
@@ -288,7 +288,7 @@
 
   &__advert {
     color: #72839C;
-    margin-bottom: 15px;
+    //margin-bottom: 15px;
     label {
       margin-left: 1px;
       margin-bottom: 3px;
@@ -693,9 +693,12 @@
   }
 }
 
+.ArticleCreateForm__advert-wrap~.ArticleCreateForm__button-wrap {
+  margin-top: 0;
+}
+
 ._focus {
   flex-direction: column;
-
 }
 
 ._no_focus {
